@@ -1,5 +1,8 @@
 2009-12-01  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* comint.el (comint-insert-input): Ignore clicks to the right of
+	the field.  Reported by Bob Nnamtrop <bobnnamtrop@gmail.com>.
+
 	* vc.el (vc-print-log-internal): Don't wait for the prcess to
 	terminate before setting up the major mode.
 
